@@ -1,3 +1,14 @@
+2003-09-23  Jakub Steiner <jimmac@ximian.com>
+
+	* 16x16/mimetypes/gnome-mime-image-gif.png
+	* 16x16/mimetypes/gnome-mime-image-tiff.png
+	* 16x16/mimetypes/gnome-mime-image-wmf.png
+	* 32x32/mimetypes/gnome-mime-image-gif.png
+	* 32x32/mimetypes/gnome-mime-image-tiff.png
+	* 32x32/mimetypes/gnome-mime-image-wmf.png: more MIME types
+	* 32x32/Makefile.am
+	* 16x16/Makefile.am: updated
+
 2003-09-22  Jakub Steiner <jimmac@ximian.com>
 
 	* 16x16/stock/object/stock_add-bookmark.png
